Änderung Util.Error() -> Util.Alert()

--- a/src/MiracleList_BD/Web/Components/Export.razor
+++ b/src/MiracleList_BD/Web/Components/Export.razor
@@ -108,7 +108,7 @@
   }
   catch (Exception ex)
   {
-   Util.Error("Word-Dokument kann nicht erzeugt werden: " + ex.Message);
+   await Util.Alert("Word-Dokument kann nicht erzeugt werden: " + ex.Message);
   }
  }
 
