--- a/src/MiracleList_WinUI/MainWindow.xaml
+++ b/src/MiracleList_WinUI/MainWindow.xaml
@@ -1,17 +1,26 @@
-<!-- Copyright (c) Microsoft Corporation and Contributors. -->
-<!-- Licensed under the MIT License. -->
-
 <Window
     x:Class="MiracleList_WinUI.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MiracleList_WinUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:controls="using:MiracleList_WinUI.Controls"
     mc:Ignorable="d">
 
- <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-  <Button x:Name="LoginButton" Click="LoginButton_Click">Login</Button>
-  <TextBlock  x:Name="Output" ></TextBlock>
- </StackPanel>
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <controls:HeaderControl/>
+
+        <ContentControl Grid.Row="1" x:Name="contentArea" 
+                        HorizontalContentAlignment="Stretch"
+                        VerticalContentAlignment="Stretch"
+                        Padding="15"/>
+
+        <controls:FooterControl Grid.Row="2" x:Name="footerControl"/>
+    </Grid>
 </Window>
