+Animation in ITVButton

--- a/src/ITVisions.Blazor/Controls/Loading.razor
+++ b/src/ITVisions.Blazor/Controls/Loading.razor
@@ -1,6 +1,6 @@
 ﻿@*Ladeanimation. Quelle: http://tobiasahlin.com/spinkit/*@
 
-<div class="spinner">
+<div class="spinnerBox">
  <div class="rect1"></div>
  <div class="rect2"></div>
  <div class="rect3"></div>
