--- a/src/ITVisions.Blazor/Controls/Loading.razor.css
+++ b/src/ITVisions.Blazor/Controls/Loading.razor.css
@@ -1,14 +1,14 @@
 ﻿body {
 }
-.spinner {
- margin: 100px auto;
+.spinnerBox {
+ /* margin: 100px auto;*/
  width: 50px;
  height: 40px;
  text-align: center;
  font-size: 10px;
 }
 
- .spinner > div {
+ .spinnerBox > div {
   background-color: #333;
   height: 100%;
   width: 6px;
@@ -17,22 +17,22 @@
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
  }
 
- .spinner .rect2 {
+ .spinnerBox .rect2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
  }
 
- .spinner .rect3 {
+ .spinnerBox .rect3 {
   -webkit-animation-delay: -1.0s;
   animation-delay: -1.0s;
  }
 
- .spinner .rect4 {
+ .spinnerBox .rect4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
  }
 
- .spinner .rect5 {
+ .spinnerBox .rect5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
  }
