--- a/src/SamplesRCL/Komponentendateien/CodeBehindVererbung.razor
+++ b/src/SamplesRCL/Komponentendateien/CodeBehindVererbung.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Samples/CodeBehindVererbung"
-@inherits CodeBehindVererbungModel;
+@inherits CodeBehindVererbungModel
 
 <h2>Code-Behind mit Vererbung</h2>
 X:
