Fix   this.StateHasChanged(); -->  await InvokeAsync(StateHasChanged);

--- a/src/ITVisions.Blazor/Controls/NetworkLatency.razor
+++ b/src/ITVisions.Blazor/Controls/NetworkLatency.razor
@@ -45,7 +45,7 @@ else
   if (firstRender)
   {
    await CalcLatency();
-   this.StateHasChanged();
+   await InvokeAsync(StateHasChanged);
   }
  }
 
