--- a/src/MiracleList_BD/Web/Components/Export.razor
+++ b/src/MiracleList_BD/Web/Components/Export.razor
@@ -114,7 +114,7 @@
 
  async Task DoEvents()
  {
-  this.StateHasChanged();
+  await InvokeAsync(StateHasChanged);
   await Task.Delay(1); // notwendig in Blazor WebAssembly und Blazor Desktop
  }
 }
