--- a/src/MiracleList_BS/Samples_BS/ProtectedBrowserStorage/CounterWithProtectedBrowserStorage.razor
+++ b/src/MiracleList_BS/Samples_BS/ProtectedBrowserStorage/CounterWithProtectedBrowserStorage.razor
@@ -26,7 +26,7 @@
   {
    sessionCount = (await ProtectedSessionStorage.GetAsync<int>("count")).Value;
    localCount = (await ProtectedLocalStorage.GetAsync<int>("count")).Value;
-   this.StateHasChanged();
+   await InvokeAsync(StateHasChanged);
   }
  }
 
