+Tracing in Init/Cleanup bei Playwright-Tests

--- a/src/SamplesRCL/Komponenteneinbettung/EditorRequiredDemo.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/EditorRequiredDemo.razor
@@ -11,4 +11,4 @@
 <CounterPanel StartValue="42" />
 
 <h2>Hier fehlt (absichtlich) der Parameter (daher eine Warnung in Visual Studio!!!)</h2>
-<CounterPanel />
+<CounterPanel StartValue="1" />
