--- a/src/MiracleList_BD/Web/Pages/About.razor
+++ b/src/MiracleList_BD/Web/Pages/About.razor
@@ -1,6 +1,7 @@
 ﻿@page "/about"
 @using ITVisions.Blazor.Controls
 @using ITVisions.Web
+@using MLBlazorRCL.Texts
 @inject HybridSharedState HybridSharedState
 @*@using Microsoft.AspNetCore.Hosting*@
 
