--- a/src/MiracleList_BM/Web/Pages/About.razor
+++ b/src/MiracleList_BM/Web/Pages/About.razor
@@ -2,6 +2,8 @@
 @using ITVisions.Blazor
 @inject HybridSharedState AppState
 @inject MiracleList.IMiracleListProxy proxy
+@using MLBlazorRCL.Texts
+@using ITVisions.Blazor.Controls
 
 <div class="row">
 
