--- a/src/MiracleList_BS/Pages/About.razor
+++ b/src/MiracleList_BS/Pages/About.razor
@@ -1,5 +1,6 @@
 ﻿@page "/about"
 @using ITVisions.Blazor
+@using MLBlazorRCL.Texts
 @inject Microsoft.AspNetCore.Hosting.Server.IServer server
 @inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment env
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor contextAccessor
