--- a/src/MiracleList_BW/Pages/About.razor
+++ b/src/MiracleList_BW/Pages/About.razor
@@ -1,6 +1,7 @@
 ﻿@page "/about"
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
+@using MLBlazorRCL.Texts
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @inject IWebAssemblyHostEnvironment env
 
