--- a/src/SamplesRCL/Komponenteneinbettung/EditorRequiredDemo.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/EditorRequiredDemo.razor
@@ -10,5 +10,5 @@
 <h2>Hier ist der Parameter vorhanden</h2>
 <CounterPanel StartValue="42" />
 
-<h2>Hier fehlt (absichtlich) der Parameter (daher eine Warnung in Visual Studio!!!)</h2>
-<CounterPanel />
+<h2>Falls hier der Parameter fehlt, gibt es eine Warnung in Visual Studio!!!</h2>
+<CounterPanel StartValue="1" />
